--- a/Version_D/index.css
+++ b/Version_D/index.css
@@ -1,14 +1,10 @@
-#container {
-
-}
-
-.pure-g > div {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 .holiday_image {
-  padding: .5%;
+	width: 15%;
+	height: 100px;
+	display: inline-block;
+	border: 2px solid black;
 }
 
+img {
+	/*max-width: 100%*/
+}
