--- a/Version_D/index.css
+++ b/Version_D/index.css
@@ -1,8 +1,22 @@
-.holiday_image {
-}
-
 div>img {
   display: inline;
   width: 90%;
   margin: 9%;
+}
+
+.holiday_message {
+	margin-top: 15%;
+	margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+  font-size: 6em;
+  font-family: Garamond;
+  text-align: center;
+  color: red;
+}
+
+.big_logo {
+  height: 90vh;
+  width: 90vw;
+  margin: auto;
 }
